kubernetes/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment-dr
  namespace: default
spec:
  host: payment
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    # outlierDetection:
    #   consecutive5xxErrors: 1
    #   interval: 1s
    #   baseEjectionTime: 1m
    #   maxEjectionPercent: 100
